# Rhythm-Checker

./: .gitignore  README.md  capacitor.config.json  index.html  package-lock.json  package.json  pyproject.toml  sw.js
.github/workflows/: deploy-pages.yml
docs/: IPHONE-UX.md  PLAN.md  TESTFLIGHT.md
examples/: make_demo.py
fonts/: OFL-Oswald.txt
ios/App/App/: Info.plist
ios/App/App.xcodeproj/: project.pbxproj
js/: app.js  audio.js  calibrate.js  dsp.js  home.js  meter.js  rudiment-data.js  show.js  store.js  theme.js
rhythm_checker/: __init__.py  analysis.py  audio.py  cli.py  grid.py  onsets.py  report.py  store.py  tuner.py
tests/: conftest.py  synth.py  test_audio_store.py  test_coverage_tails.py  test_end_to_end.py  test_grid.py  test_onsets.py  test_tuner.py
tests/web/: run.mjs
webapp/: index.html  manifest.webmanifest  sw.js
webapp/css/: app.css
webapp/fonts/: OFL-SpaceMono.txt
webapp/js/: app.js  audio.js  calibrate.js  dsp.js  feel.js  groove.js  history.js  home.js  metronome.js  notation.js  preshow.js  rudiment-data.js  rudiments.js  show.js  showflow.js  store.js  theme.js  timing.js  tuner.js
webapp/worklet/: capture.js
worklet/: capture.js
